RQ2/REQBench-ReadPyE/ReadPyE/hifi-gan/numpy/1.21.1/installationresult.txt
Looking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple
Collecting numpy==1.21.1
  Using cached https://pypi.tuna.tsinghua.edu.cn/packages/f9/d5/18336e9828d2f07beb0bcd3849c660001bedea50e6219627315968900ad6/numpy-1.21.1-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (15.7 MB)
Collecting scipy==1.7.3
  Using cached https://pypi.tuna.tsinghua.edu.cn/packages/58/4f/11f34cfc57ead25752a7992b069c36f5d18421958ebd6466ecd849aeaf86/scipy-1.7.3-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (38.1 MB)
Collecting librosa==0.3.1
  Using cached https://pypi.tuna.tsinghua.edu.cn/packages/15/e6/e9aaaf9f8a6c251bf535aa8a0054c6004130aca2af4c3a3e997c26c795b4/librosa-0.3.1.tar.gz (2.3 MB)
  Preparing metadata (setup.py): started
  Preparing metadata (setup.py): finished with status 'done'
Collecting matplotlib==0.86.2
  Using cached https://pypi.tuna.tsinghua.edu.cn/packages/f8/d0/46d6bf56ca3a466e79fe4884ec244c0a9cf035846dfb707c1bb90804a105/matplotlib-0.86.2.tar.gz (2.6 MB)
  Preparing metadata (setup.py): started
  Preparing metadata (setup.py): finished with status 'error'
  error: subprocess-exited-with-error
  
  × python setup.py egg_info did not run successfully.
  │ exit code: 1
  ╰─> [7 lines of output]
      Traceback (most recent call last):
        File "<string>", line 36, in <module>
        File "<pip-setuptools-caller>", line 34, in <module>
        File "/tmp/pip-install-xf6iprg3/matplotlib_2de1e593649949be9c5a145b36d54160/setup.py", line 103
          print 'installing data to', datapath
                                   ^
      SyntaxError: Missing parentheses in call to 'print'. Did you mean print('installing data to', datapath)?
      [end of output]
  
  note: This error originates from a subprocess, and is likely not a problem with pip.
error: metadata-generation-failed

× Encountered error while generating package metadata.
╰─> See above for output.

note: This is an issue with the package mentioned above, not pip.
hint: See above for details.
